k8s/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander-deployment
  namespace: redis
  labels:
    app: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
      - name: redis-commander
        image: rediscommander/redis-commander:latest
        ports:
        - containerPort: 8081
      nodeSelector:
        kubernetes.io/arch: arm64
